--- a/src/app/shared/styles/base.css
+++ b/src/app/shared/styles/base.css
@@ -39,7 +39,6 @@ section {
 
 .homepage.--mobile {
   & p,
-  & img,
   & h2,
   & h3,
   & h4,
